# wei-qbittorrent

./: .gitignore  Cargo.toml  README.md  doc.md
download/: 0.1.2.torrent
src/: main.rs
