[package]
name = "wei-qbittorrent"
version = "0.1.0"
edition = "2021"
description = "wei qbittorrent"
documentation = "https://github.com/zuiyue-com/wei-qbittorrent"
homepage = "https://github.com/zuiyue-com/wei-qbittorrent"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"