[package]
name = "wei-qbittorrent"
version = "0.1.4"
edition = "2021"
description = "wei qbittorrent"
documentation = "https://github.com/zuiyue-com/wei-qbittorrent"
homepage = "https://github.com/zuiyue-com/wei-qbittorrent"
license = "MIT OR Apache-2.0"

[dependencies]
wei-env = "0.2.4"
wei-run = "0.1.23"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
single-instance = "0.3"
regex = "1"
