[package]
name = "wei-qbittorrent"
version = "0.1.4"
edition = "2021"
description = "wei qbittorrent"
documentation = "https://github.com/zuiyue-com/wei-qbittorrent"
homepage = "https://github.com/zuiyue-com/wei-qbittorrent"
license = "MIT OR Apache-2.0"

[profile.release]
# opt-level = 'z'

[dependencies]
# wei-run = "0.2.5"
wei-run = { path = "../wei-run" }
wei-env = "0.2.4"
wei-log = "0.2.8"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde = "1.0.183"
serde_json = "1.0.104"
serde_derive = "1.0.183"
tokio = { version = "1.31.0", features = ["full"] }
tokio-util = "0.7.8"
single-instance = "0.3"
regex = "1"
